fixed so make model and year is printed

--- a/public/cars.html
+++ b/public/cars.html
@@ -9,8 +9,9 @@
     <title>WAACD</title>
 </head>
 <body>
-    <script src="cars.html"></script>
-    <div id="cars">
+    <h1>List of cars:</h1>
+    <script src="js/app.js"></script>
+    <div id="myCars">
 
     </div>
 </body>
